--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,12 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "user", "-d", "intervu"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
 
   pgadmin:
     image: dpage/pgadmin4
