--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_PASSWORD=${PG_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST_AUTH_METHOD: "trust"
     container_name: postgres
     volumes:
       - ./pgdata:/var/lib/postgresql/data
@@ -18,7 +19,7 @@ services:
       dockerfile: Dockerfile
     container_name: intervu_server
     environment:
-      - PORT=${PORT}
+      PORT: ${PORT}
     ports:
       - '3000:3000'
     depends_on:
@@ -31,8 +32,8 @@ services:
     restart: always
     container_name: pgadmin4
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: pgadmin4
     ports:
       - '5050:80'
     depends_on:
